# WishingFn

./: .gitattributes  .gitignore  AGENTS.md  MagicFn3.ahk  README-AGENT.md  README.en.md  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  update.ps1  wishingfn.cmd
.github/workflows/: release.yml
config/: wishingfn.kbd
scripts/: build-unix.sh  build-windows.ps1  install-latest-windows.ps1  install-windows.ps1  wishingfn_entry.py
scripts/install/: install-latest-windows.ps1  install.ps1  install.sh  uninstall.ps1  update.ps1
tests/: test_cli.py
wishingfn/: cli.py
