[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wishingfn"
version = "0.1.0"
description = "A lightweight Kanata + Python MagicFn-style launcher and favorites tool."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Karl0007" }]

[project.scripts]
wishingfn = "wishingfn.cli:main"
